--- a/index.html
+++ b/index.html
@@ -27,42 +27,42 @@
          <div class="image active" data-id="1">
             <picture>
                <source
-                  srcset="images/yasmine-horizontal.jpg"
+                  srcset="images/yasmine-1-horizontal.jpg"
                   media="(min-width: 681px)"
                   />
                <img
-                  src="images/crop-yasmine-vertical.jpg"
+                  src="images/yasmine-1-vertical.jpg"
                   />
             </picture>
          </div>
          <div class="image" data-id="2">
             <picture>
                <source
-                  srcset="images/mik-horizontal.jpg"
+                  srcset="images/mikayla-1-horizontal.jpg"
                   media="(min-width: 681px)"
                   />
                <img
-                  src="images/mik-vertical.jpg"
+                  src="images/mikayla-2-vertical.jpg"
                   />
             </picture>
          </div>
          <div class="image" data-id="3">
             <picture>
                <source
-                  srcset="images/mik-horizontal2.jpg"
+                  srcset="images/mikayla-2-horizontal.jpg"
                   media="(min-width: 681px)"
                   />
-               <img src="images/mik-veritical2.jpg" />
+               <img src="images/mikayla-3-vertical.jpg" />
             </picture>
          </div>
          <div class="image" data-id="4">
             <picture>
                <source
-                  srcset="images/jordyn-vertical.jpg"
+                  srcset="images/jordyn-1-horizontal.jpg"
                   media="(min-width: 681px)"
                   />
                <img
-                  src="images/jordyn-horizontal.jpg"
+                  src="images/jordyn-2-vertical.jpg"
                   />
             </picture>
          </div>
