--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                   meh. Pok pok hammock whatever farm-to-table cronut fanny pack la
                   croix tousled.
                </p>
+               <iframe class="audioPlayer" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1169585275&color=%23fcacc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                <p>
                   Vaporware kombucha fam shabby chic, cold-pressed meditation
                   chicharrones taiyaki master cleanse celiac. Aesthetic austin woke
@@ -180,6 +181,7 @@
                   cardigan retro. You probably haven't heard of them normcore fam chia
                   jianbing.
                </p>
+               <iframe class="audioPlayer" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1169576314&color=%23fcacc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                <p>
                   Celiac artisan shaman, gentrify mumblecore mustache shoreditch lyft
                   next level succulents whatever YOLO iPhone heirloom. Succulents YOLO
@@ -196,75 +198,6 @@
                </p>
                <p>
                   <div class="icon left"><img src="images/noun_makeup_3565882.png"/></div>
-                  Crucifix kickstarter hexagon pop-up mustache chartreuse poutine,
-                  vexillologist bushwick subway tile single-origin coffee. Celiac
-                  retro godard, gastropub live-edge cornhole lomo ethical keffiyeh
-                  lo-fi lumbersexual fam fixie. Snackwave chia health goth gluten-free
-                  kogi. Thundercats chia copper mug, ugh mlkshk affogato everyday
-                  carry paleo plaid mixtape tumeric. Franzen fam twee banjo you
-                  probably haven't heard of them.
-               </p>
-            </div>
-         </div>
-         <div class="slide screen" data-image="3">
-            <div class="container corner">
-               <h1>Beauty influencer continued</h1>
-               <p>Mikayla Niguera: makeup artist and influencer</p>
-            </div>
-         </div>
-         <div class="slide screen" data-image="3"></div>
-         <div class="slide screen white" data-image="3">
-            <div class="container">
-               <p>
-                  <div class="icon right"><img src="images/noun_makeup_4047694.png"/></div>
-                  I'm baby bicycle rights la croix yuccie thundercats. Shabby chic
-                  four loko drinking vinegar shaman thundercats cornhole occupy quinoa
-                  kickstarter disrupt hammock pour-over. Health goth irony hot chicken
-                  90's brunch artisan forage lumbersexual raclette tbh lyft DIY. Cred
-                  chia organic, fam raclette tote bag hoodie mustache prism put a bird
-                  on it irony listicle chillwave. Bushwick pabst franzen direct trade
-                  raclette, shoreditch roof party migas PBR&amp;B gochujang. Four
-                  dollar toast readymade af paleo art party, kitsch narwhal live-edge
-                  la croix. Intelligentsia slow-carb umami cronut prism, poutine palo
-                  santo VHS 3 wolf moon four dollar toast whatever banjo vegan paleo
-                  direct trade.
-               </p>
-               <p>
-                  Flexitarian pour-over blog hoodie, four loko kitsch authentic food
-                  truck. Banh mi forage literally, DIY cray tousled actually pickled
-                  flannel lyft XOXO meditation hexagon VHS. Umami chambray poke
-                  adaptogen XOXO readymade la croix. Raclette shaman retro wolf,
-                  pitchfork marfa yr selvage humblebrag paleo vegan. Farm-to-table
-                  flexitarian seitan adaptogen lumbersexual salvia hammock flannel
-                  meh. Pok pok hammock whatever farm-to-table cronut fanny pack la
-                  croix tousled.
-               </p>
-               <p>
-                  Vaporware kombucha fam shabby chic, cold-pressed meditation
-                  chicharrones taiyaki master cleanse celiac. Aesthetic austin woke
-                  flannel. Poutine enamel pin hella, pork belly food truck photo booth
-                  vegan flannel. Dreamcatcher tote bag taiyaki, banh mi iceland marfa
-                  ennui slow-carb adaptogen. Asymmetrical locavore man bun, ennui
-                  street art sriracha hexagon leggings sartorial poutine mlkshk
-                  cardigan retro. You probably haven't heard of them normcore fam chia
-                  jianbing.
-               </p>
-               <p>
-                  <div class="icon left"><img src="images/noun_makeup_3565893.png"/></div>
-                  Celiac artisan shaman, gentrify mumblecore mustache shoreditch lyft
-                  next level succulents whatever YOLO iPhone heirloom. Succulents YOLO
-                  gentrify 8-bit, etsy coloring book franzen bicycle rights readymade
-                  snackwave heirloom pug typewriter thundercats ugh. Kale chips umami
-                  VHS, pour-over edison bulb cloud bread pork belly raw denim fam you
-                  probably haven't heard of them ethical blue bottle mumblecore craft
-                  beer blog. La croix chillwave next level selfies organic, cred
-                  skateboard bicycle rights cray 8-bit mustache letterpress. Hammock
-                  twee jianbing williamsburg literally echo park next level venmo
-                  gentrify seitan VHS letterpress 3 wolf moon fanny pack. Vaporware
-                  craft beer YOLO pour-over slow-carb. Hoodie paleo biodiesel
-                  mumblecore palo santo.
-               </p>
-               <p>
                   Crucifix kickstarter hexagon pop-up mustache chartreuse poutine,
                   vexillologist bushwick subway tile single-origin coffee. Celiac
                   retro godard, gastropub live-edge cornhole lomo ethical keffiyeh
@@ -308,6 +241,7 @@
                   meh. Pok pok hammock whatever farm-to-table cronut fanny pack la
                   croix tousled.
                </p>
+               <iframe class="audioPlayer" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1169594461&color=%23fcacc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                <p>
                   Vaporware kombucha fam shabby chic, cold-pressed meditation
                   chicharrones taiyaki master cleanse celiac. Aesthetic austin woke
