--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
          </div>
          <div class="slide screen" data-image="2">
             <div class="container corner">
-               <h1>Beauty influencer</h1>
+               <h1>Beauty Influencer</h1>
                <p> Mikayla Niguera: makeup artist and influencer</p>
             </div>
          </div>
@@ -210,7 +210,7 @@
          </div>
          <div class="slide screen" data-image="4">
             <div class="container corner">
-               <h1>Special effects makeup</h1>
+               <h1>Special Effects Makeup</h1>
                <p>Jordyn Shea: makeup artist and influencer</p>
             </div>
          </div>
