commit to github

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                </p>
                <p>
                   Growth for influencers continues at a similar rate to beauty companies.   
-               </p>    
+               </p> 
+               <iframe title="TikTok Annual Users" aria-label="Grouped Bars" id="datawrapper-chart-lgVHk" src="https://datawrapper.dwcdn.net/lgVHk/2/" scrolling="no" frameborder="0" style="border: none;" width="636" height="303"></iframe>   
             </div>
          </div>
          <div class="slide screen" data-image="4">
@@ -288,7 +289,7 @@
          <div class="slides">
             <div class="slide screen" data-image="5">
                <div class="container corner">
-                  <h1>Is this the future makeup?</h1>
+                  <h1>Is this the future of makeup?</h1>
                   <p>Photo: Mikayla Niguera, makeup artist and influencer</p>
                </div>
             </div>
