commit to github

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
          <div class="slide screen" data-image="1">
             <div class="container corner">
                <h1>TikTok has influenced the way we buy beauty</h1>
-               <p>By Keira Wingate and Angela Polumbo</p>
+               <p>By Keira Wingate and Angela Palumbo</p>
                <p>Photo: Mikayla Niguera, makeup artist and influencer</p>
             </div>
          </div>
