commit to github

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
          <div class="slide screen" data-image="4">
             <div class="container corner">
                <h1>How Influencers are reaping the benefits</h1>
-               <p>Photo: Yasmine Boward, social media manager</p>
+               <p>Photo: Yasmine Bedward, social media manager</p>
             </div>
          </div>
          <div class="slide screen" data-image="4"></div>
