--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                <p>
                   These massive numbers come as no surprise to makeup influencers who saw the beauty industry transform since the start of the pandemic. 
 
-               Jordan Shea is another TikTok influencer who saw massive growth on the app during the pandemic. The Glendale, Arizona based influencer started using TikTok prior to the pandemic. She specializes in special effect makeup looks.
+               Jordyn Shea is another TikTok influencer who saw massive growth on the app during the pandemic. The Glendale, Arizona based influencer started using TikTok prior to the pandemic. She specializes in special effect makeup looks.
 
                </p>
                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1192950559&color=%23e95ba6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
