--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                   At the young age of eight, Mikayla Nogueira fell in love with beauty after her dad took her to a haunted house and she saw special effects makeup artists putting it on the cast. When she turned 10, she was able to get her makeup done for the first time and since then, she’s created her own beauty empire.
                </p>
                <p>
-                  When she was 12 she began wearing makeup everyday and continued to do so. Now, Nogueira is one of the biggest beauty influencers on the social media app, TikTok, with over 9.5 million followers.
+                  Now, Nogueira is one of the biggest beauty influencers on the social media app, TikTok, with over 9.5 million followers.
                </p>
                <p> 
                   “Sometimes I still feel like I'm in this dream, which I really am because from that eight-year-old girl who was in awe of these special effects makeup artists at this haunted house to now, I literally manifested this dream for the last decade and now I'm literally sitting in that dream,” she said. 
                </p>
                <p> 
-                  Nogueira is just one of many influencers who saw the incredible things social media apps like TikTok and Instagram can do for their career and the beauty industry. Videos of her doing impressive and colorful makeup looks have caught the attention of millions, which in turn, caused items to sell out both online and in stores – something she says started during the pandemic. 
+                  Nogueira is just one of many influencers who saw the opportunity social media apps like TikTok and Instagram can have for their career and the beauty industry. Videos of her doing impressive and colorful makeup looks have caught the attention of millions, which in turn, caused items to sell out both online and in stores – something she says started during the pandemic. 
                </p>
                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1192947607&color=%23e95ba6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                <p>
@@ -111,14 +111,14 @@
                </p>
 
                <p>
-               The growth of TikTok and the beauty industry go hand in hand. Both beauty influencers and social media managers saw massive growth in their own income in the last two years due to the changes the pandemic caused in the industry. 
+                  The growth of TikTok and the beauty industry are now linked. Both beauty influencers and social media managers saw massive growth in their own income in the last two years due to the changes the pandemic caused in the industry. 
                </p>
                <p>
                   <div class="icon left"><img src="images/noun_makeup_1577477.png"/></div>
                   Through 2020 to 2021, TikTok gained 1.36 billion downloads. March of 2020 through 2021, total global sales were a whopping $483 billion in the beauty industry, up from $380.2 billion in 2019.
                </p>
                <p>
-                  Thanks to the ability to reach millions of people with similar interests in makeup with the tap of a finger on TikTok, the beauty industry has taken advantage and exploded in popularity in the last two years.
+                  Thanks to the ability to reach millions of people with similar interests in makeup with the tap of a finger, the beauty industry has taken advantage and exploded in popularity in the last two years, with sales increasing from TikTok. 
                </p>
             </div>
          </div>
@@ -136,14 +136,12 @@
                </p>
                <p>
                   <div class="icon right"><img src="images/noun_makeup_2117897.png"/></div>
-                  By August 2020, the official number of monthly U.S. TikTok users were 100 million (based on quarterly usage), up 800% from January 2018’s company figures. Today, over 1 billion people in the world are on the app. 
-
+                  By August 2020, the official number of monthly U.S. TikTok users reached 100 million (based on quarterly usage), up 800% from January 2018’s company figures. Today, over 1 billion people in the world are on the app. 
                </p>
                <p>
                   These massive numbers come as no surprise to makeup influencers who saw the beauty industry transform since the start of the pandemic. 
 
-               Jordyn Shea is another TikTok influencer who saw massive growth on the app during the pandemic. The Glendale, Arizona based influencer started using TikTok prior to the pandemic. She specializes in special effect makeup looks.
-
+                  Jordyn Shea is another TikTok influencer who saw massive growth on the app during the pandemic. The Glendale, Ariz. based influencer started using TikTok just prior to the pandemic. She specializes in special effect makeup looks.
                </p>
                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1192950559&color=%23e95ba6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                <p>
@@ -170,8 +168,8 @@
                </p>
                <iframe title="Fastest Growing Brands on TikTok Worldwide in July 2021
 " aria-label="Bar Chart" id="datawrapper-chart-l1k6v" src="https://datawrapper.dwcdn.net/l1k6v/1/" scrolling="no" frameborder="0" style="border: none;" width="643" height="485"></iframe>
-               <p>   
-                  Michael Archambault from Glen Cove, New York is a senior staff writer at Reviews.org and a social media marketing expert. According to Archambault, companies are benefited by working with TikTok influencers to advertise their products in this way.
+               <p> 
+                  Michael Archambault from Glen Cove, N.Y. is a senior staff writer at Reviews.org and a social media marketing expert. According to Archambault, companies are benefited by working with TikTok influencers to advertise their products in this way.  
                </p> 
                <p>
                   “Those referral codes, in addition to giving an incentive or discount that the consumer will feel is exclusive to them, really allows tracking to see how many people are getting a product from that influencer,” Archambault said.
@@ -245,7 +243,7 @@
                   Some influencers with less followers than Nogueira, Shea and Roses that don’t do brand deals can still benefit from the popularity of makeup on TikTok.
                </p>
               <p>
-               Lisette Calanni from Miami, Florida, started making makeup videos for TikTok in 2020 and now has over 39 thousand followers. 
+               Lisette Calanni from Miami, Fla., started making makeup videos for TikTok in 2020 and now has over 39 thousand followers. 
             </p> 
             <p>
                Even with a following smaller than some larger makeup TikTok creators, Calanni influences the kinds of beauty products that people buy through the videos she makes.
@@ -267,7 +265,7 @@
                   But to be successful on TikTok is challenging. Behind the face of some beauty influencers are social media managers. These are the people that bring the magic to a creators page and have reaped benefits of the new TikTok makeup boom too. 
                </p>
                <p>
-                  Yasmine Bedward, a social media manager based in Atlanta, Georgia, has her own social media business and saw growth during the pandemic that blew up her services. The relationship between the audience and the platform has changed a lot, bringing in more clients than she has ever seen before. 
+                  Yasmine Bedward, a social media manager based in Atlanta, Ga.,, has her own social media business and saw growth during the pandemic that blew up her services. The relationship between the audience and the platform has changed a lot, bringing in more clients than she has ever seen before. 
                </p>
                <p>
                   Before the pandemic, Bedward had about six clients in total, and since the start of the pandemic and the uptick in social media influencers, she is now seeing six or more clients a week. Boward founded her company in 2018 and in her first year only brought in $1200. Since then, she says the company is now on its way in being a six figure a year business.
